# blender

./: .arcconfig  .clang-format  .clang-tidy  .deepsource.toml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  1.patch  AUTHORS  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  COPYING  DevBlenderCMake.cmake  GNUmakefile  Jinja2-3.1.2-py3-none-any.whl  Justfile  LICENSE  Makefile  Patch1.patch  README  README.md  SConstruct  __init___.py  aiosignal-1.3.1-py3-none-any.whl  async_timeout-4.0.2-py3-none-any.whl  attrs-22.2.0-py3-none-any.whl  blender.sln  charset_normalizer-2.1.1-py3-none-any.whl  completed-goals.md  configure  editor.java  engine.py  frozenlist-1.3.3-cp311-cp311-win_amd64.whl  github-1.2.7-py3-none-any.whl  gitpod.yml  idna-3.4-py3-none-any.whl  (+18 more)
blender/: CMakeLists.txt
blenderplayer/: CMakeLists.txt
blenderplayer/bad_level_call_stubs/: Makefile  SConscript  stubs.c
build_files/build_environment/: CMakeLists.txt  dependencies.dot  install_deps.sh  install_linux_packages.py  prepare_release_env.sh
intern/: BL-license.txt  CMakeLists.txt  GPL-license.txt  Makefile  SConscript
intern/SoundSystem/: CMakeLists.txt  Makefile  SConscript  SND_C-api.h  SND_CDObject.h  SND_DependKludge.h  SND_DeviceManager.h  SND_IAudioDevice.h  SND_Object.h  SND_Scene.h  SND_SoundListener.h  SND_SoundObject.h  SND_Utils.h  SND_WaveCache.h  SND_WaveSlot.h  SoundDefines.h
intern/action/: ACT_Action.h  ACT_ActionC-Api.h  ACT_ActionStack.h  Makefile
intern/atomic/: CMakeLists.txt  atomic_ops.h
intern/audaspace/: AUD_C-API.h  CMakeLists.txt  COPYING  Makefile  SConscript
intern/autoseam/: CMakeLists.txt  DummyClass.cpp  DummyClass.h  autoseam_C_API.cpp  autoseam_C_API.h
intern/bmfont/: BMF_Api.h  BMF_Fonts.h  BMF_Settings.h  CMakeLists.txt  Makefile  SConscript
intern/boolop/: CMakeLists.txt  Makefile  SConscript
intern/bsp/: CMakeLists.txt  Makefile  SConscript
intern/clog/: CLG_log.h  CMakeLists.txt  clog.c  clog.cc
intern/container/: CMakeLists.txt  CTR_HashedPtr.h  CTR_List.h  CTR_Map.h  CTR_TaggedIndex.h  CTR_TaggedSetOps.h  CTR_UHeap.h  Makefile  SConscript
intern/csg/: SConscript
intern/cycles/: CMakeLists.txt  SConscript
intern/decimation/: CMakeLists.txt  Makefile  SConscript
intern/decklink/: CMakeLists.txt  DeckLinkAPI.cpp  DeckLinkAPI.h
intern/draco_bridge/: CMakeLists.txt
intern/dualcon/: CMakeLists.txt  SConscript  dualcon.h
intern/eigen/: CMakeLists.txt  SConscript  eigen_capi.h
intern/elbeem/: CMakeLists.txt  COPYING  COPYING_trimesh2  Makefile  SConscript
intern/ffmpeg/: CMakeLists.txt  ffmpeg_compat.h
intern/gawain/: CMakeLists.txt
intern/ghost/: CMakeLists.txt  GHOST_C-api.h  GHOST_CallbackEventConsumer.hh  GHOST_IContext.h  GHOST_IContext.hh  GHOST_IEvent.h  GHOST_IEvent.hh  GHOST_IEventConsumer.h  GHOST_IEventConsumer.hh  GHOST_ISystem.h  GHOST_ISystem.hh  GHOST_ISystemPaths.h  GHOST_ISystemPaths.hh  GHOST_ITimerTask.h  GHOST_ITimerTask.hh  GHOST_IWindow.h  GHOST_IWindow.hh  GHOST_IXrContext.h  GHOST_IXrContext.hh  GHOST_Path-api.h  GHOST_Path-api.hh  GHOST_Rect.h  GHOST_Rect.hh  GHOST_Types.h  GHOST_Types.hh  GHOST_Xr-api.hh  Makefile  SConscript
intern/glew-mx/: CMakeLists.txt  SConscript  glew-mx.h
intern/gpudirect/: CMakeLists.txt  dvpapi.cpp  dvpapi.h
intern/guardedalloc/: BLO_sys_types.h  CMakeLists.txt  MEM_guardedalloc.h  MEM_safe_multiply.h  MEM_sys_types.h  Makefile  SConscript  mmap_win.h
intern/iksolver/: CMakeLists.txt  Makefile  SConscript
intern/instant-meshes/: CMakeLists.txt  LICENSE.txt  README.md  Readme.Blender.MD  instant_meshes_c_api.h
intern/itasc/: Armature.cpp  Armature.hpp  CMakeLists.txt  Cache.cpp  Cache.hpp  ConstraintSet.cpp  ConstraintSet.hpp  ControlledObject.cpp  ControlledObject.hpp  CopyPose.cpp  CopyPose.hpp  Distance.cpp  Distance.hpp  FixedObject.cpp  FixedObject.hpp  Makefile  MovingFrame.cpp  MovingFrame.hpp  Object.hpp  SConscript  Scene.cpp  Scene.hpp  Solver.hpp  UncontrolledObject.cpp  UncontrolledObject.hpp  WDLSSolver.cpp  WDLSSolver.hpp  WSDLSSolver.cpp  WSDLSSolver.hpp  WorldObject.cpp  WorldObject.hpp  eigen_types.cpp  eigen_types.hpp  ublas_types.hpp
intern/keymaker/: Makefile  blenkey.h  key.c  key.h  key_internal.h  keyloader.c  mt19937int.c  mt19937int.h
intern/libc_compat/: CMakeLists.txt  libc_compat.c
intern/libmv/: .clang-format  CMakeLists.txt  ChangeLog  bundle.sh  files.txt  libmv-capi.h  mkfiles.sh
intern/locale/: CMakeLists.txt  SConscript  blender_locale.cpp  blender_locale.h  boost_locale_wrapper.cpp  boost_locale_wrapper.h  messages.cpp  messages.h  messages_apple.mm  msgfmt.cc  osx_user_locale.mm
intern/mantaflow/: CMakeLists.txt
intern/memutil/: CMakeLists.txt  MEM_Allocator.h  MEM_CacheLimiter.h  MEM_CacheLimiterC-Api.h  MEM_NonCopyable.h  MEM_RefCountPtr.h  MEM_RefCounted.h  MEM_RefCountedC-Api.h  MEM_SmartPtr.h  MEM_alloc_string_storage.hh  Makefile  SConscript
intern/meshoptimizer_bridge/: CMakeLists.txt
intern/mikktspace/: CMakeLists.txt  README.md  SConscript  mikk_atomic_hash_set.hh  mikk_float3.hh  mikk_util.hh  mikktspace.c  mikktspace.h  mikktspace.hh
intern/moto/: CMakeLists.txt  Makefile  SConscript
intern/numaapi/: AUTHORS  CMakeLists.txt  LICENSE  README  README.blender
intern/opencl/: CMakeLists.txt  OCL_opencl.h  SConscript
intern/opencolorio/: CMakeLists.txt  SConscript  fallback_impl.cc  gpu_shader_display_transform.glsl  gpu_shader_display_transform_frag.glsl  gpu_shader_display_transform_vert.glsl  gpu_shader_display_transform_vertex.glsl  ocio_capi.cc  ocio_capi.cpp  ocio_capi.h  ocio_capi_stub.cpp  ocio_impl.cc  ocio_impl.h  ocio_impl_glsl.cc  ocio_shader_shared.hh
intern/opennl/: CMakeLists.txt  Makefile  SConscript
intern/opensubdiv/: CMakeLists.txt  SConscript  gpu_shader_opensubd_display.glsl  gpu_shader_opensubdiv_fragment.glsl  gpu_shader_opensubdiv_geometry.glsl  (+27 more)
source/: CMakeLists.txt  Makefile  SConscript  bf-members.txt  nan_compile.mk  nan_definitions.mk  nan_link.mk  nan_subdirs.mk  nan_warn.mk
tests/: CMakeLists.txt  check_deprecated.py
(+32599 files in other folders)
